--- a/belgeler/kap-orgusu.html
+++ b/belgeler/kap-orgusu.html
@@ -118,40 +118,40 @@ title: Kap Örgüsü
 
     <p>Deveb kap örgüsünün konumlama özellikleri oluşturulmuş birkaç öznitelik sınıfıyla kullanılır. İsterseniz tek tek bu sınıfları inceleyelim</p>
 
-    <h3>Konumlama: <span data-metin="dikkat">taşmadan | kaymadan</span></h3>
+    <h3>Konumlama: <span data-metin="dikkat">taşmadan | dürmeden</span></h3>
     <p>"taşmadan" sınıfı bir HTML etiketindeki içeriğin dışarı taşmasını engeller.</p>
-    <p>"kaymadan" sınıfı bir HTML etiketindeki içeriğin alt satırlara kaymasını engeller ve tek satırda gösterir.</p>
+    <p>"dürmeden" sınıfı bir HTML etiketindeki içeriğin alt satırlara kaymasını engeller ve tek satırda gösterir.</p>
     <p></p>
     <div data-gnl="1 1p" class="önizleme">
       <h3>Önizleme</h3>
-      <div data-gnl="1 1p kaymadan">
+      <div data-gnl="1 1p dürmeden">
         <div>
-          Buradaki içerikler kaymadan etkisi altında görüntülenmektedir.
+          Buradaki içerikler dürmeden etkisi altında görüntülenmektedir.
         </div>
         <div>
-          Buradaki içerikler kaymadan etkisi altında görüntülenmektedir.
+          Buradaki içerikler dürmeden etkisi altında görüntülenmektedir.
         </div>
         <div>
-          Buradaki içerikler kaymadan etkisi altında görüntülenmektedir.
+          Buradaki içerikler dürmeden etkisi altında görüntülenmektedir.
         </div>
         <div>
-          Buradaki içerikler kaymadan etkisi altında görüntülenmektedir.
+          Buradaki içerikler dürmeden etkisi altında görüntülenmektedir.
         </div>
       </div>
     </div>
     <pre data-gnl="1 1p"><code class="language-html">
-    &lt;div data-gnl=&quot;1 1p kaymadan&quot;&gt;
+    &lt;div data-gnl=&quot;1 1p dürmeden&quot;&gt;
      &lt;div&gt;
-      Buradaki i&ccedil;erikler kaymadan etkisi alt&#305;nda g&ouml;r&uuml;nt&uuml;lenmektedir.
+      Buradaki i&ccedil;erikler dürmeden etkisi alt&#305;nda g&ouml;r&uuml;nt&uuml;lenmektedir.
      &lt;/div&gt;
      &lt;div&gt;
-      Buradaki i&ccedil;erikler kaymadan etkisi alt&#305;nda g&ouml;r&uuml;nt&uuml;lenmektedir.
+      Buradaki i&ccedil;erikler dürmeden etkisi alt&#305;nda g&ouml;r&uuml;nt&uuml;lenmektedir.
      &lt;/div&gt;
      &lt;div&gt;
-      Buradaki i&ccedil;erikler kaymadan etkisi alt&#305;nda g&ouml;r&uuml;nt&uuml;lenmektedir.
+      Buradaki i&ccedil;erikler dürmeden etkisi alt&#305;nda g&ouml;r&uuml;nt&uuml;lenmektedir.
      &lt;/div&gt;
      &lt;div&gt;
-      Buradaki i&ccedil;erikler kaymadan etkisi alt&#305;nda g&ouml;r&uuml;nt&uuml;lenmektedir.
+      Buradaki i&ccedil;erikler dürmeden etkisi alt&#305;nda g&ouml;r&uuml;nt&uuml;lenmektedir.
      &lt;/div&gt;
     &lt;/div&gt;
     </code></pre>
