--- a/belgeler/kap-orgusu.html
+++ b/belgeler/kap-orgusu.html
@@ -138,7 +138,7 @@ title: Kap Örgüsü
           Buradaki içerikler dürmeden etkisi altında görüntülenmektedir.
         </div>
       </div>
-      <div class="1 24p taşmadan">
+      <div data-gnl="1 24p taşmadan">
         Taşmadan yazamadıklarımızdan mısınız?
       </div>
     </div>
