Hatalı örnek düzeltildi.

--- a/belgeler/ekran-orgusu.html
+++ b/belgeler/ekran-orgusu.html
@@ -116,7 +116,7 @@ title: Ekran Örgüsü
     <h3>? | ?</h3>
     <p>Belirtildiği ekranları kapsar. Örnek: data-ort="gizle" (english: data-md="hide")</p>
     <h3>büyükleri-? | ?-bigger</h3>
-    <p>Belirtildiği ekrandan büyük ekranları kapsar. Örnek: data-ort="büyükleri-gizle" (english: data-md="hide-with-bigger")</p>
+    <p>Belirtildiği ekrandan büyük ekranları kapsar. Örnek: data-ort="büyükleri-gizle" (english: data-md="hide-bigger")</p>
     <h3>büyükleriyle-? | ?-with-bigger</h3>
     <p>Belirtildiği ekran dahil kendisinden büyük ekranları kapsar. Örnek: data-ort="büyükleriyle-gizle" (english: data-md="hide-with-bigger")</p>
 
