--- a/belgeler/ekran-orgusu.html
+++ b/belgeler/ekran-orgusu.html
@@ -102,10 +102,10 @@ title: Ekran Örgüsü
     <p>Terimlerden anlaşılacağı üzere genel :|: general tüm ekranları kapsar. Diğerleri ise sırasıyla saat, telefon, tablet, dizüstü, masaüstü, tv, dev ekranları kapsar.</p>
 
     <h2>Ekranları Kapsama Yönleri</h2>
-    <p>Deveb ekranları kapsama yönlerine göre kullanım sağlamaktadır. Yani büyük ekranlardan küçük ekranlara doğru, küçük ekranlardan büyük ekranlara doğru ve sadece belirtilen ekranlar olarak üç farklı yöntemle kullanabilirsiniz. Deveb'in bazı özelliklerinde varsayılan ekran kapsama yönü küçük ekrandandan büyük ekrana doğrudur. Bunun dışında olan durumlarda ise ekranları kapsama yönünü belirtmeniz gerekmektedir.</p>
+    <p>Deveb ekranları kapsama yönlerine göre kullanım sağlamaktadır. Yani büyük ekranlardan küçük ekranlara doğru, küçük ekranlardan büyük ekranlara doğru ve sadece belirtilen ekranlar, belirtilen ekran dışında olanlar gibi ihtiyacınıza göre yöntemleri kullanabilirsiniz. Deveb'in bazı özelliklerinde varsayılan ekran kapsama yönü küçük ekrandan büyük ekrana doğrudur. Bunun dışında olan durumlarda ise ekranları kapsama yöntemini belirtmeniz gerekmektedir.</p>
     <h3>Kullanımı</h3>
     <p>Az önce belirttiğimiz gibi bazı özelliklerinde varsayılan yön küçükten büyüğe doğru demiştik. Kap örgüsü mesela buna bir örnektir. Ve sadece bu şekilde kullanılması dışında bir özelliğe sahip değildir. Kap örgüsünden bir alıntı yapalım isterseniz.</p>
-    <p>Örneğin dizüstü ekranlardan başlayarak daha büyük ekranlarda bir alanın yarısı kadar alan parçası kullanmak istiyorsak şöyle yazabiliriz; data-ort="1 2p". Daha küçük olan ekranlar ne olacak diye soruyor gibisiniz... Tanımlama yapmadıysanız büyük ihtimal doğal (auto) genişliğe sahip olacaktır.</p>
+    <p>Örneğin dizüstü ekranlardan başlayarak daha büyük ekranlarda bir alanın yarısı kadar alan parçası kullanmak istiyorsak şöyle yazabiliriz; data-ort="1 2p". Daha küçük olan ekranlar ne olacak diye soruyor gibisiniz... Tanımlama yapmadıysanız büyük ihtimal doğal (auto) genişliğe veya 100% genişliğe sahip olacaktır.</p>
     <p>Diğer durumlarda ise ekran yönlerini belirtmek için şöyle kullanımlara baş vururuz;</p>
     <p data-metin="ana">Türkçe: küçükleriyle-?, küçükleri-?, ?, büyükleriyle-?, büyükleri-?</p>
     <p data-metin="ana">English: ?-with-smaller, ?-smaller, ?, ?-with-bigger, ?-bigger</p>
