--- a/belgeler/kap-orgusu/genlesme-duzeni.html
+++ b/belgeler/kap-orgusu/genlesme-duzeni.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Kap Örgüsü genleşme Düzeni
+title: Kap Örgüsü Genleşme Düzeni
 ---
   <style media="screen">
     .önizleme{background-color:#efefef; padding:10px;}
@@ -8,9 +8,9 @@ title: Kap Örgüsü genleşme Düzeni
     .önizleme h3 {color:#999;margin:0 0 10px 0;}
     pre.language-html{ max-height:50vh; overflow-y: auto;}
   </style>
-  <p>Basit şekilde genleşmelar belirterek kap alanları oluşturabilirsiniz. genleşme düzeni "CSS FLEX" özelliği üzerine geliştirilmiştir. genleşme örgüsünün kullanımı için ekran özniteliklerine (data-gnl, data-mnk ...) "<span data-metin="ana">SAYIg</span>" sınıfını yazmanız yeterlidir. SAYI 1 ile 24 arasında değer alabilir. Örneğin sayfayı ikiye ayırıp sol tarafın sağ taraftan iki kat daha geniş olmasını istiyorsunuz. Bunun için data-gnl="2g" data-gnl="1g" öznitelikleri tanımlaybilirsiniz.</p>
+  <p>Basit şekilde genleşmeler belirterek kap alanları oluşturabilirsiniz. Genleşme düzeni "CSS FLEX" özelliği üzerine geliştirilmiştir. genleşme örgüsünün kullanımı için ekran özniteliklerine (data-gnl, data-mnk ...) "<span data-metin="ana">SAYIg</span>" sınıfını yazmanız yeterlidir. SAYI 1 ile 24 arasında değer alabilir. Örneğin sayfayı ikiye ayırıp sol tarafın sağ taraftan iki kat daha geniş olmasını istiyorsunuz. Bunun için data-gnl="2g" data-gnl="1g" öznitelikleri tanımlaybilirsiniz.</p>
 
-  <h3>genleşme Düzeni Nasıl Kullanılır?</h3>
+  <h3>Genleşme Düzeni Nasıl Kullanılır?</h3>
   <p>Ekranların hepsinde üç sütun görünümünde bir düzen oluşturalım. Örnek olarak düzen dağılımını 1 4 2 şeklinde yapalım.</p>
   <p></p>
   <div data-gnl="1 1p" class="önizleme">
