--- a/belgeler/kap-orgusu/genlesme-duzeni.html
+++ b/belgeler/kap-orgusu/genlesme-duzeni.html
@@ -38,8 +38,8 @@ title: Kap Örgüsü Genleşme Düzeni
   </code></pre>
   <p></p>
 
-  <h3>genleşme Ve Parça Düzeni Kıyaslaması</h3>
-  <p>genleşme düzeni ile parça düzeni aynı hesap dengeleriyle oluşturulmamaktadır. genleşme düzeninde her genleşme birbiri arasında etkileşimli olup, parça düzeninde ise kararlı genişlik oluşturulur. Örnek ile daha iyi anlayalım.</p>
+  <h3>Genleşme Ve Parça Düzeni Kıyaslaması</h3>
+  <p>Genleşme düzeni ile parça düzeni aynı hesap dengeleriyle oluşturulmamaktadır. Genleşme düzeninde her genleşme birbiri arasında etkileşimli olup, parça düzeninde ise kararlı genişlik oluşturulur. Örnek ile daha iyi anlayalım.</p>
   <p></p>
   <div data-gnl="1 1p" class="önizleme">
     <h3>Önizleme</h3>
