--- a/belgeler/gelistiriciler/ekran-orgusu.html
+++ b/belgeler/gelistiriciler/ekran-orgusu.html
@@ -3,7 +3,7 @@ layout: default
 title: Ekran Örgüsünü Anlamak (Çekirdek Geliştiriciler)
 ---
 <h2>
-  3 Temel Üzerine Kurulmuş Ekran Örgüsü
+  4 Temel Üzerine Kurulmuş Ekran Örgüsü
 </h2>
 <p>
   Deveb ile ekran yönetimini çok kolay yapabilmekteyiz. Ancak çekirdek geliştiricisi iseniz öncelikle
@@ -12,6 +12,9 @@ title: Ekran Örgüsünü Anlamak (Çekirdek Geliştiriciler)
 </p>
 <p></p>
 <ul>
+  <li>
+    Genel: Tüm ekranları kapsar
+  </li>
   <li>
     Büyükleriyle: Küçükten büyüğe doğru ekranları kapsar
   </li>
@@ -113,3 +116,50 @@ title: Ekran Örgüsünü Anlamak (Çekirdek Geliştiriciler)
     </tr>
   </tbody>
 </table>
+<h2>
+  "deveb.css" Düzeni
+</h2>
+<p>
+  deveb.css satırları 4 alan içerisine yazılır. Dosyanın ilk alanı genel CSS etkileri için kullanılır. Örneğin varsayılan tanımlamalar, data-gnl özniteliği vs...
+  Bu tanımlamaların devamında ise küçükten büyüğe doğru etkiler tanımlanmaya başlanır. Ve önce küçük ekran ölçekleri işlenir. Üçüncü alanımız ise büyükten küçüğe doğru ekranları kapsamak için kullanılır.
+  Burada ise önce büyük ekrandan başlanarak etkiler yazılır. Ve sonuncu alanımızda ise sadece belirlenmiş ekran ölçeğini kapsamalar yapılır. Bu alanda tanımlamalar küçük ekranlardan başlayarak yapılır. Aşağıdaki maddelerde daha sade bir şekilde konuyu anlayacaksınız.<br>
+</p>
+<h3>
+  Genel
+</h3>
+<p>
+  Tüm ekranlar etkileneceği için CSS ekran seçici tanımlanmamıştır. Uygun yere satırları yazabiliriz.
+</p>
+<h3>
+  Küçükten Büyüğe (varsayılan)
+</h3>
+<p>
+  @media screen and (min-width:300px){}<br>
+  @media screen and (min-width:576px){}<br>
+  @media screen and (min-width:768px){}<br>
+  @media screen and (min-width:992px){}<br>
+  @media screen and (min-width:1200px){}<br>
+  @media screen and (min-width:1900px){}<br>
+</p>
+<h3>
+  Büyükten Küçüğe
+</h3>
+<p>
+  @media screen and (min-width:1900px){}<br>
+  @media screen and (min-width:1200px){}<br>
+  @media screen and (min-width:992px){}<br>
+  @media screen and (min-width:768px){}<br>
+  @media screen and (min-width:576px){}<br>
+  @media screen and (min-width:300px){}<br>
+</p>
+<h3>
+  Bunu
+</h3>
+<p>
+  @media screen and (min-width:300px) and (max-width:576px){}<br>
+  @media screen and (min-width:576px){} and (max-width:768px){}<br>
+  @media screen and (min-width:768px){} and (max-width:992px){}<br>
+  @media screen and (min-width:992px){} and (max-width:1200px){}<br>
+  @media screen and (min-width:1200px){} and (max-width:1900px){}<br>
+  @media screen and (min-width:1900px){}<br>
+</p>
