--- a/belgeler/gelistiriciler/ekran-orgusu.html
+++ b/belgeler/gelistiriciler/ekran-orgusu.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Ekran Örgüsünü Anlamak (Çekirdek Geliştiriciler)
+title: Ekran Örgüsünü Anlamak (Çekirdek Geliştiriciler İçin)
 ---
 <h2>
   4 Temel Üzerine Kurulmuş Ekran Örgüsü
