--- a/belgeler/gelistiriciler/ekran-orgusu.html
+++ b/belgeler/gelistiriciler/ekran-orgusu.html
@@ -169,5 +169,5 @@ title: Ekran Örgüsünü Anlamak (Çekirdek Geliştiriciler İçin)
 <p>
   Örneğin gizle işlemi yapmak istiyoruz. Ekran seçicilerimizi belirlerken büyükleriyle-gizle dediğimizde tanımladığımız ekran ve sonrasını gizlemesi gerekiyor.
   Bunu yapabilmek için 2. alana ilgili "display:none;" tanımlamalarını yapıyoruz. Ufak ekran ve daha büyüklerine tanımlama yapabilmemiz için şu alana şöyle tanımlama yapacağız.<br><br>
-  @media screen and (min-width:300px){<br><br>[data-ufk~="büyükleriyle-gizle"]{display:none;}<br>}
+  @media screen and (min-width:300px){<br>[data-ufk~="büyükleriyle-gizle"]{display:none;}<br>}<br><br>Buradan anlaşılacağı üzere diğer alanlar da mantıklı bir şekilde böyle kullanılabilecektir. Artık tüm ekranlara hükmedebiliriz. ;)
 </p>
