--- a/belgeler/gelistiriciler/ekran-orgusu.html
+++ b/belgeler/gelistiriciler/ekran-orgusu.html
@@ -171,3 +171,7 @@ title: Ekran Örgüsünü Anlamak (Çekirdek Geliştiriciler İçin)
   Bunu yapabilmek için 2. alana ilgili "display:none;" tanımlamalarını yapıyoruz. Ufak ekran ve daha büyüklerine tanımlama yapabilmemiz için şu alana şöyle tanımlama yapacağız.<br><br>
   @media screen and (min-width:300px){<br>[data-ufk~="büyükleriyle-gizle"]{display:none;}<br>}<br><br>Buradan anlaşılacağı üzere diğer alanlar da mantıklı bir şekilde böyle kullanılabilecektir. Artık tüm ekranlara hükmedebiliriz. ;)
 </p>
+<p>
+  Eğer büyükleriyle değilde büyükleri gizleme tanımlamasına imkan sağlamak istiyorsak aynı şeyleri bir sonraki ekran ölçeği içine yazarak bunu başarabiliriz.<br><br>
+  @media screen and (min-width:576px){<br>[data-ufk~="büyükleri-gizle"]{display:none;}<br>}<br>
+</p>
