--- a/belgeler/gelistiriciler/ekran-orgusu.html
+++ b/belgeler/gelistiriciler/ekran-orgusu.html
@@ -153,7 +153,7 @@ title: Ekran Örgüsünü Anlamak (Çekirdek Geliştiriciler İçin)
   @media screen and (min-width:300px){}<br>
 </p>
 <h3>
-  Bunu
+  Bunu: Sadece İlgili Ekran
 </h3>
 <p>
   @media screen and (min-width:300px) and (max-width:576px){}<br>
