--- a/belgeler/gelistiriciler/ekran-orgusu.html
+++ b/belgeler/gelistiriciler/ekran-orgusu.html
@@ -163,8 +163,19 @@ title: Ekran Örgüsünü Anlamak (Çekirdek Geliştiriciler İçin)
   @media screen and (min-width:1200px){} and (max-width:1900px){}<br>
   @media screen and (min-width:1900px){}<br>
 </p>
+<h2>Ekran Seçiciler</h2>
+<p>
+  Ekranlara göre tanımlama yapmada 6 farklı kullanım yöntemi mevcuttur. Her biri farklı seçim yöntemiyle ekranları etkilemek için kullanılır. Bunlar şöyledir;
+  <br>
+  Küçükleriyle: Kendisi dahil kendinden küçük ekranları etkiler
+  Küçükleri: Kendisinden küçük ekranları etkiler
+  Bunu: Sadece ilgili ekranı etkiler
+  Diğerleri: İlgili ekran haricinde diğer tüm ekranları etkiler
+  Büyükleri: Kendisinden büyük ekranları etkiler
+  Büyükleriyle: Kendisi dahil kendisinden büyük ekranları etkiler
+</p>
 <h2>
-  Büyükleriyle - Büyükleri ve Küçükleriyle - Küçükleri Arasındaki Farklar
+  Büyükleriyle - Büyükleri Arasındaki Farkları Yakından Anlamak
 </h2>
 <p>
   Örneğin gizle işlemi yapmak istiyoruz. Ekran seçicilerimizi belirlerken büyükleriyle-gizle dediğimizde tanımladığımız ekran ve sonrasını gizlemesi gerekiyor.
