--- a/belgeler/gelistiriciler/ekran-orgusu.html
+++ b/belgeler/gelistiriciler/ekran-orgusu.html
@@ -167,12 +167,12 @@ title: Ekran Örgüsünü Anlamak (Çekirdek Geliştiriciler İçin)
 <p>
   Ekranlara göre tanımlama yapmada 6 farklı kullanım yöntemi mevcuttur. Her biri farklı seçim yöntemiyle ekranları etkilemek için kullanılır. Bunlar şöyledir;
   <br>
-  Küçükleriyle: Kendisi dahil kendinden küçük ekranları etkiler
-  Küçükleri: Kendisinden küçük ekranları etkiler
-  Bunu: Sadece ilgili ekranı etkiler
-  Diğerleri: İlgili ekran haricinde diğer tüm ekranları etkiler
-  Büyükleri: Kendisinden büyük ekranları etkiler
-  Büyükleriyle: Kendisi dahil kendisinden büyük ekranları etkiler
+  Küçükleriyle: Kendisi dahil kendinden küçük ekranları etkiler <br>
+  Küçükleri: Kendisinden küçük ekranları etkiler<br>
+  Bunu: Sadece ilgili ekranı etkiler<br>
+  Diğerleri: İlgili ekran haricinde diğer tüm ekranları etkiler<br>
+  Büyükleri: Kendisinden büyük ekranları etkiler<br>
+  Büyükleriyle: Kendisi dahil kendisinden büyük ekranları etkiler<br>
 </p>
 <h2>
   Büyükleriyle - Büyükleri Arasındaki Farkları Yakından Anlamak
