--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: deveb
 <div data-gnl="8 8p göbekte" data-ort="8p" class="beri-üst-2">
   <div data-gnl="8 uzun-ol göbekte" data-ort="4" data-etki="havada">
     <div data-gnl="1 1p">
-      <h1 class="metin-deveb beri-2" style="font-size:80pt; margin-bottom:0; justify-content:center; font-family: 'Comfortaa', cursive; color:#2c2171 !important; display:flex;">deveb</h1>
+      <h1 class="metin-deveb beri-2" style="font-size:80pt; margin-bottom:0; justify-content:center; font-family: 'Comfortaa', cursive; color:#eee !important; display:flex;">deveb</h1>
       <p class="metin-gri-3 beri-1" style="font-size:13pt;">
         İşte bu! Yepyeni bir önyüz çatısı buldunuz. Ağ (web) sayfalarınızı tasarlarken deveb'in oluşturduğu özelliklerden faydalanın. Tüm uygulamalarınızı kapsamlı bileşenleri ile kolayca yapmaya başlayın.
         Ekran örgüsü, kap örgüsü, renk örgüsü ve dahası İngilizce ve Türkçe olmak üzere iki dil desteği ile keşfedilmeyi bekliyor.
