--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ title: deveb
         Ekran örgüsü, kap örgüsü, renk örgüsü ve dahası İngilizce ve Türkçe olmak üzere iki dil desteği ile keşfedilmeyi bekliyor.
       </p>
       <p class="metin-gri-3 beri-2" data-gnl="1 1p ortada göbekte">
-        <a data-bağ="genel" href="/belgeler/kap-orgusu.html">BAŞLA</a>&nbsp;
+        <a data-bağ="genel" href="/belgeler/deveb.html">BAŞLA</a>&nbsp;
         <a data-bağ="genel" href="https://www.facebook.com/groups/1818283228485179/">KATIL</a>
       </p>
     </div>
