--- a/belgeler/terimler.html
+++ b/belgeler/terimler.html
@@ -114,7 +114,7 @@ title: Terimler
   <tr>
     <td class="tg-7uzy">Diğer Ekranlar</td>
     <td class="tg-7uzy">Other Screens</td>
-    <td class="tg-sh4c">diğerlerini-<span data-metin="ana gri">sınıf</span></td>
+    <td class="tg-sh4c">diğerleri-<span data-metin="ana gri">sınıf</span></td>
     <td class="tg-sh4c"><span data-metin="ana gri">class</span>-others</td>
     <td class="tg-7uzy">Tanımlandığı ekran grubundakiler dışında kalanlara özellik atar</td>
     <td class="tg-7uzy">Assigns properties to those outside the defined screen group</td>
@@ -122,7 +122,7 @@ title: Terimler
   <tr>
     <td class="tg-yw4l">Büyük Ekranlar</td>
     <td class="tg-yw4l">Bigger Screens</td>
-    <td class="tg-baqh">büyüklerini-<span data-metin="ana gri">sınıf</span></td>
+    <td class="tg-baqh">büyükleri-<span data-metin="ana gri">sınıf</span></td>
     <td class="tg-baqh"><span data-metin="ana gri">class</span>-bigger</td>
     <td class="tg-yw4l">Tanımlandığı ekrandan daha büyük ekranlara özellik atar</td>
     <td class="tg-yw4l">Assigns features to screens bigger than the defined screen</td>
@@ -130,7 +130,7 @@ title: Terimler
   <tr>
     <td class="tg-yw4l">Küçük Ekranlar</td>
     <td class="tg-yw4l">Smaller Screens</td>
-    <td class="tg-baqh">küçüklerini-<span data-metin="ana gri">sınıf</span></td>
+    <td class="tg-baqh">küçükleri-<span data-metin="ana gri">sınıf</span></td>
     <td class="tg-baqh"><span data-metin="ana gri">class</span>-smaller</td>
     <td class="tg-yw4l">Tanımlandığı ekrandan daha küçük ekranlara özellik atar</td>
     <td class="tg-yw4l">Assigns features to screens smaller than the defined screen</td>
