--- a/belgeler/kap-orgusu/konumlama.html
+++ b/belgeler/kap-orgusu/konumlama.html
@@ -10,7 +10,7 @@ title: Kap Örgüsü Konumlama
 </style>
 <p>Deveb kap örgüsünün konumlama özellikleri oluşturulmuş birkaç öznitelik sınıfıyla kullanılır. İsterseniz tek tek bu sınıfları inceleyelim</p>
 
-<h3>Konumlama: <span data-metin="dikkat">taşmadan | dürmeden</span></h3>
+<h3>Konumlama: <span data-metin="dikkat">kaymadan | dürmeden</span></h3>
 <p>"taşmadan" sınıfı bir HTML etiketindeki içeriğin dışarı taşmasını engeller.</p>
 <p>"dürmeden" sınıfı bir HTML etiketindeki içeriğin alt satırlara kaymasını engeller ve tek satırda gösterir.</p>
 <p></p>
