--- a/belgeler/kap-orgusu.html
+++ b/belgeler/kap-orgusu.html
@@ -9,23 +9,13 @@ title: Kap Örgüsü
 
     <h2>Kap Örgüsü Nedir, Nasıl Kullanılır?</h2>
 
-    <p>Kap örgüsü (İngilizce olarak "grid system") kullanıldığı sayfanın içinde genişlikler tanımlamaya yarar. "Kap" sözcüğünün bilinen bir anlamı da fiziksel bir şeyi bir arada tutmaya yarayan demektir. Deveb çatısı altında bulunan kap örgüsünün kendine özgü kullanımı diğer kap örgülerinden farklıdır ve ellbette benzer yönleri de kapsamaktadır.</p>
+    <p>Kap örgüsü (İngilizce olarak "grid system") kullanıldığı sayfanın içinde genişlikler tanımlamaya yarar. "Kap" sözcüğünün bilinen bir anlamı da fiziksel bir şeyi bir arada tutmaya yarayan demektir. Kendisine özgü kullanımıyla 1'den 24'e kadar kap düzeni oluşturabildiğiniz bu örgüde gerekli kullanım bilgilerini belgenin devamında bulacaksınız.</p>
 
-    <p>Satır, sütun gibi sözcükler yerine kap sözcüğü kap örgüsünün temeli kullanılmaktadır. 1'den 24'e kadar kap düzeni oluşturabildiğiniz bu örgüde ayrıntılı kullanım bilgilerini belgenin devamında bulacaksınız.</p>
-
-    <p>Kap örgüsünü doğru şekilde kullanabilmek için bazı terimleri biliyor olmamız gerekir. Bu terimler yazılışlarına göre üç farklı şekilde ele almaktayız. Bunlar;</p>
-    <p></p>
-    <ul data-deveb>
-      <li>"<span data-metin="dikkat">SAYI SAYIp</span>"</li>
-      <li>"<span data-metin="dikkat">SAYI</span>"</li>
-      <li>"<span data-metin="dikkat">SAYIp</span>"</li>
-    </ul>
-    <p></p>
-    <p> Her terimin işlevi yerine göre bir işleyiş kazanır. Kap örgüsünde parça miktarı ve parça düzeni terimleri ana terimlerdir. Parça miktarı terimini dahil olduğu parça düzeninde, kaplanmak istenen toplam parça genişliğini belirtmek için kullanacağız. Parça düzeni ise bir genişliği kaç eşit parçaya bölerek kullanmak istediğinizi belirtmekye yarar. Parça miktarı "SAYI" ile ifade edilir. Parça düzeni ise "SAYIp" ile ifade edilir. "p" harfi burada düzen mi yoksa miktar mı belirttiğinizi ayırt etmek amacıyla kullanılır. Parça kelimesinin ilk harfidir. Şimdi ayrıntılara değinelim.</p>
+    <p>Kap örgüsünü doğru şekilde kullanabilmek için "<span data-metin="dikkat">SAYI SAYIp</span>" öğrenelim.</p>
 
     <h3>"SAYI SAYIp" Kullanım Yöntemi</h3>
 
-    <p>Bu kavramı kullanarak bir kap yazdığınızda tarayıcılara şunu dersiniz; "Ben bu alanı SAYIp düzeninde SAYI kadar parçanın toplam genişliğinde kullanacağım". Örneğin siz bulunduğunuz genişliğin yarısı kadar bir genişlik kullanmak istiyorsanız "1 2p", "2 4p", "3 6p", "4 8p", "5 10p", "6 12p", "7 14p", "8 16p", "9 18p", "10 20p", "11 22p" veya "12 24p" değerlerinden dilediğiniz bir tanesini kullanmanız gerekmektedir.</p>
+    <p>Bu kavramı kullanarak bir kap yazdığınızda tarayıcılara şunu dersiniz; "Bulunduğum genişliği SAYIp kadar eşit parçaya bölüm SAYI kadar parça genişliğini kullanacağım". Örneğin siz bulunduğunuz genişliğin yarısı kadar bir genişlik kullanmak istiyorsanız "1 2p", "2 4p", "3 6p", "4 8p", "5 10p", "6 12p", "7 14p", "8 16p", "9 18p", "10 20p", "11 22p" veya "12 24p" değerlerinden dilediğiniz bir tanesini kullanmanız yeterlidir.</p>
     <p></p>
     <div data-gnl="1 1p" class="önizleme">
       <h3>Önizleme</h3>
