--- a/belgeler/deveb.html
+++ b/belgeler/deveb.html
@@ -4,6 +4,20 @@ title: Giriş
 ---
 <h1>Deveb Hakkında</h1>
 <p>Deveb, Türkçe ve İngilizce terimler kullanılarak geliştirilen bir önyüz çatısıdır. Ağ geliştiricileri ve adayları (web developers) alışılmış olanın ötesine geçmeye hazırlanın. Deveb yeni bir soluk getiriyor. Özellikleriyle birlikte ele alındığında etkisi altında kalacaksınız. Barındırdığı kuralları öğrenmek ise fazla vaktinizi almayacak.</p>
+
+<div data-gnl="1 1p ortada" data-kçk="1 3p">
+  <i class="fa fa-th" aria-hidden="true"></i>
+  <p>Esnek & Özellikli</p>
+</div>
+<div data-gnl="1 1p ortada" data-kçk="1 3p">
+  <i class="fa fa-code" aria-hidden="true"></i>
+  <p>İhtiyaç Duyulan</p>
+</div>
+<div data-gnl="1 1p ortada" data-kçk="1 3p">
+  <i class="fa fa-coffee" aria-hidden="true"></i>
+  <p>Hızlı Kullanım</p>
+</div>
+
 <h1>Genel Sınıflar Değil, Veri Niteliği Sınıfları Tanımladık!</h1>
 <p>Deveb "html class" diye bilinen sınıf özelliğini bir kenara koyuyor. Yani bu alanı Deveb'i kullanmak isteyen ağ geliştiricileri için boşaltıyor. Peki bir geliştirici Deveb'i nasıl kullanacak? Deveb'in özellikleri "data-attr" olarak bilinen veri niteliği ile birlikte kullanılmaktadır.</p>
 <p>Deveb'i karşınıza koyduğunuzda gözünüze çarpacak olan ilk kural ekran ölçeklerinin veri niteliği olarak tanımlandırılabilmesi olacak. Bu şu demek oluyor; her ekran ölçeğini bir veri niteliği olarak tanımlayıp içine sınıfları yazabileceksiniz. Böylelikle ekran ölçeklerine hakimiyetiniz kolaylaşacak. Tasarımlarınızı yaparken bunu daha iyi fark edeceksiniz. Dikkatinizi çekmek istediğimiz nokta diğer önyüz çatılarında sınıflarla çalışırken her şeyi bir arada yazmanız gerekir. Bunların yanına harici olarak oluşturulmuş sınıfları eklediğinizde her şey iç içe girmeye başlar. CSS tarafında bunlara söz geçirmek teknik olarak sorunsuz olsa da Deveb'teki gibi kullanım etkilerine ve kolaylıklarına her zaman sahip olmaz. Örneğin Deveb diğer önyüz çatılarıyla çakışmadan bir arada kullanılabilir. Diğerleri benzer sınıf terimleri kullandığı için düzeltmeler yapmak zorunluğuyla karşı karşıya kalma olasılığına her zaman sahip olacaksınız.</p>
