--- a/belgeler/deveb.html
+++ b/belgeler/deveb.html
@@ -4,18 +4,18 @@ title: Giriş
 ---
 <h1>Deveb Hakkında</h1>
 <p>Deveb, Türkçe ve İngilizce terimler kullanılarak geliştirilen bir önyüz çatısıdır. Ağ geliştiricileri ve adayları (web developers) alışılmış olanın ötesine geçmeye hazırlanın. Deveb yeni bir soluk getiriyor. Özellikleriyle birlikte ele alındığında etkisi altında kalacaksınız. Barındırdığı kuralları öğrenmek ise fazla vaktinizi almayacak.</p>
-
+<p></p>
 <div data-gnl="1 1p ortada" data-kçk="1 3p">
   <i class="fa fa-th" aria-hidden="true"></i>
-  <p>Esnek & Özellikli</p>
+  <p data-gnl="ortada">Esnek & Özellikli</p>
 </div>
 <div data-gnl="1 1p ortada" data-kçk="1 3p">
   <i class="fa fa-code" aria-hidden="true"></i>
-  <p>İhtiyaç Duyulan</p>
+  <p data-gnl="ortada">İhtiyaç Duyulan</p>
 </div>
 <div data-gnl="1 1p ortada" data-kçk="1 3p">
   <i class="fa fa-coffee" aria-hidden="true"></i>
-  <p>Hızlı Kullanım</p>
+  <p data-gnl="ortada">Hızlı Kullanım</p>
 </div>
 
 <h1>Genel Sınıflar Değil, Veri Niteliği Sınıfları Tanımladık!</h1>
