--- a/belgeler/deveb.html
+++ b/belgeler/deveb.html
@@ -7,15 +7,15 @@ title: Giriş
 <p></p>
 <div data-gnl="1 1p ortada" data-kçk="1 3p">
   <i class="fa fa-th" aria-hidden="true"></i>
-  <p data-gnl="ortada">Esnek & Özellikli</p>
+  <p data-gnl="1 1p ortada">Esnek & Özellikli</p>
 </div>
 <div data-gnl="1 1p ortada" data-kçk="1 3p">
   <i class="fa fa-code" aria-hidden="true"></i>
-  <p data-gnl="ortada">İhtiyaç Duyulan</p>
+  <p data-gnl="1 1p ortada">İhtiyaç Duyulan</p>
 </div>
 <div data-gnl="1 1p ortada" data-kçk="1 3p">
   <i class="fa fa-coffee" aria-hidden="true"></i>
-  <p data-gnl="ortada">Hızlı Kullanım</p>
+  <p data-gnl="1 1p ortada">Hızlı Kullanım</p>
 </div>
 
 <h1>Genel Sınıflar Değil, Veri Niteliği Sınıfları Tanımladık!</h1>
