--- a/belgeler/kap-orgusu/konumlama.html
+++ b/belgeler/kap-orgusu/konumlama.html
@@ -55,10 +55,13 @@ title: Kap Örgüsü Konumlama
 </code></pre>
 <p></p>
 
-<h3>Konumlama: <span data-metin="dikkat">solda | ortada | sağda</span></h3>
+<h3>Konumlama: <span data-metin="dikkat">solda | ortada | sağda | solda-ol | ortada-ol | sağda-ol</span></h3>
 <p>"solda" sınıfı bir HTML etiketindeki içeriği sola dayalı olarak gösterir.</p>
 <p>"ortada" sınıfı bir HTML etiketindeki içeriği ortalanmış olarak gösterir.</p>
 <p>"sağda" sınıfı bir HTML etiketindeki içeriği sağa dayalı olarak gösterir.</p>
+<p>"solda-ol" sınıfı bir HTML etiketini sola dayalı olarak gösterir.</p>
+<p>"ortada-ol" sınıfı bir HTML etiketini ortalanmış olarak gösterir.</p>
+<p>"sağda-ol" sınıfı bir HTML etiketini sağa dayalı olarak gösterir.</p>
 <p></p>
 <div data-gnl="1 1p" class="önizleme">
   <h3>Önizleme</h3>
