--- a/belgeler/sekme-orgusu.html
+++ b/belgeler/sekme-orgusu.html
@@ -29,6 +29,72 @@ title: Sekme Örgüsü
   </div>
 </div>
 
+
+
+
+<!--  yeni sekme örgüsü -->
+<div data-sekme="">
+  <input id="im1" type="radio" name="sekme" checked="checked">
+  <label for="im1">Birinci</label>
+  <div>
+    Birinci sekme içeriği
+  </div>
+
+  <input id="im2" type="radio" name="sekme">
+  <label for="im2">İkinci</label>
+  <div>
+    İkinci sekme içeriği
+  </div>
+
+  <input id="im3" type="radio" name="sekme">
+  <label for="im3">Üçüncü</label>
+  <div>
+    Üçüncü sekme içeriği
+  </div>
+
+  <input id="im4" type="radio" name="sekme">
+  <label for="im4">Dördüncü</label>
+  <div>
+    Dördüncü sekme içeriği
+  </div>
+</div>
+
+<div data-sekme="sağda">
+  <input id="im1s" type="radio" name="sekme-sağda" checked="checked">
+  <label for="im1s">Birinci</label>
+  <div>
+    Birinci sağda sekme içeriği
+  </div>
+
+  <input id="im2s" type="radio" name="sekme-sağda">
+  <label for="im2s">İkinci</label>
+  <div>
+    İkinci sağda sekme içeriği
+  </div>
+
+  <input id="im3s" type="radio" name="sekme-sağda">
+  <label for="im3s">Üçüncü</label>
+  <div>
+    Üçüncü sağda sekme içeriği
+  </div>
+
+  <input id="im4s" type="radio" name="sekme-sağda">
+  <label for="im4s">Dördüncü</label>
+  <div>
+    Dördüncü sağda sekme içeriği
+  </div>
+</div>
+
+
+<!-- yeni sekme örgüsü sonu -->
+
+
+
+
+
+
+
+
 <div class="sekmeler" data-gnl="24 24p" >
 
   <input type="radio" name="sekmeler" id="sekme1" checked="checked">
