--- a/belgeler/sekme-orgusu.html
+++ b/belgeler/sekme-orgusu.html
@@ -33,7 +33,7 @@ title: Sekme Örgüsü
 
 
 <!--  yeni sekme örgüsü -->
-<div data-sekme="">
+<div data-sekme data-gnl="1 1p">
   <input id="im1" type="radio" name="sekme" checked="checked">
   <label for="im1">Birinci</label>
   <div>
@@ -59,7 +59,7 @@ title: Sekme Örgüsü
   </div>
 </div>
 
-<div data-sekme="sağda">
+<div data-sekme="sağda" data-gnl="1 1p">
   <input id="im1s" type="radio" name="sekme-sağda" checked="checked">
   <label for="im1s">Birinci</label>
   <div>
