--- a/belgeler/sekme-orgusu.html
+++ b/belgeler/sekme-orgusu.html
@@ -86,6 +86,67 @@ title: Sekme Örgüsü
 </div>
 
 
+
+
+<div data-sekme="sütun">
+  <input id="im1d" type="radio" name="sekme-sütun" checked="checked">
+  <label for="im1d" data-gnl="1 5p">Birinci</label>
+  <div data-gnl="4 5p">
+    Birinci sağda sekme içeriği
+  </div>
+
+  <input id="im2d" type="radio" name="sekme-sütun">
+  <label for="im2d" data-gnl="1 5p">İkinci</label>
+  <div data-gnl="4 5p">
+    İkinci sağda sekme içeriği
+  </div>
+
+  <input id="im3d" type="radio" name="sekme-sütun">
+  <label for="im3d" data-gnl="1 5p">Üçüncü</label>
+  <div data-gnl="4 5p">
+    Üçüncü sağda sekme içeriği
+  </div>
+
+  <input id="im4d" type="radio" name="sekme-sütun">
+  <label for="im4d" data-gnl="1 5p">Dördüncü</label>
+  <div data-gnl="4 5p">
+    Dördüncü sağda sekme içeriği
+  </div>
+</div>
+
+<div data-sekme="sütun sağda">
+  <input id="im1ds" type="radio" name="sekme-sütun-sağda" checked="checked">
+  <label for="im1ds" data-gnl="1 5p">Birinci</label>
+  <div data-gnl="4 5p">
+    Birinci sağda sekme içeriği
+  </div>
+
+  <input id="im2ds" type="radio" name="sekme-sütun-sağda">
+  <label for="im2ds" data-gnl="1 5p">İkinci</label>
+  <div data-gnl="4 5p">
+    İkinci sağda sekme içeriği
+  </div>
+
+  <input id="im3ds" type="radio" name="sekme-sütun-sağda">
+  <label for="im3ds" data-gnl="1 5p">Üçüncü</label>
+  <div data-gnl="4 5p">
+    Üçüncü sağda sekme içeriği
+  </div>
+
+  <input id="im4ds" type="radio" name="sekme-sütun-sağda">
+  <label for="im4ds" data-gnl="1 5p">Dördüncü</label>
+  <div data-gnl="4 5p">
+    Dördüncü sağda sekme içeriği
+  </div>
+</div>
+
+
+
+
+
+
+
+
 <!-- yeni sekme örgüsü sonu -->
 
 
